[workspace]
members = [
    "som-core",
    "som-interpreter-bc",
    "som-interpreter-ast",
    "som-lexer",
    "som-parser-core",
    "som-parser-symbols",
    "som-parser-text",
]

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = "fat"
# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1
# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3

[profile.release-dbg]
inherits = "release"
# Includes debug information in release builds. Necessary for profiling.
debug = true
