[package]
name = "som-interpreter-bc"
version = "0.1.0"
description = "A bytecode compiler for the Simple Object Machine"
authors = ["Nicolas Polomack <nmp21@kent.ac.uk>"]
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
# internal
som-core = { path = "../som-core", version = "0.1.0" }
som-lexer = { path = "../som-lexer", version = "0.1.0" }
som-parser = { package = "som-parser-symbols", path = "../som-parser-symbols", version = "0.1.0" }
# som-parser = { package = "som-parser-text", path = "../som-parser-text", version = "0.1.0" }

# CLI interface
structopt = "0.3.25"

# error handling
anyhow = "1.0.51"

# consistently-ordered hashmaps
indexmap = "1.7.0"

# big integers
num-bigint = "0.4.3"
num-traits = "0.2.14"

# random numbers
rand = "0.8.4"

# global allocator
jemallocator = { version = "0.5.0", optional = true }

[features]
jemalloc = ["jemallocator"]
