[package]
name = "som-interpreter"
version = "0.1.0"
description = "An interpreter for the Simple Object Machine"
authors = ["Nicolas Polomack <nmp21@kent.ac.uk>"]
edition = "2018"
publish = false

[dependencies]
# internal
som-core = { path = "../som-core", version = "0.1.0" }
som-lexer = { path = "../som-lexer", version = "0.1.0" }
som-parser = { package = "som-parser-symbols", path = "../som-parser-symbols" }
# som-parser = { package = "som-parser-text", path = "../som-parser-text" }

# CLI interface
structopt = "0.3.14"

# error handling
anyhow = "1.0.28"
